# router/index.js
@@ -1,8 +1,8 @@
 import express from 'express';
 
-// import courseRouter from './courses';
 import communityRouter from './community.js';
 import courseRouter from './course.js';
+import commentRouter from './comment.js'
 import swaggerRoute from './swagger.js';
 // import userRouter from './user.js';
 
@@ -11,6 +11,7 @@ const routes = express.Router();
 routes.use('/', swaggerRoute);
 routes.use('/community', communityRouter);
 routes.use('/course', courseRouter);
+routes.use('/comment', commentRouter);
 // routes.use('./user', userRouter);
 
 export default routes;
